Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27621

Native FileDialog doesn't work under Windows XP.

XMLWordPrintable

    • d402d0c3e3f177976d31bd7822a735e535562871

      At present, the native filedialog of Qt5 is created through CLSID_FileOpenDialog/IID_IFileOpenDialog, CLSID_FileSaveDialog/IID_IFileSaveDialog, which provided by Windows Vista.

        For Gerrit Dashboard: QTBUG-27621
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            dbzhang800 debao zhang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes